# linux-gui-configs

./: .gitignore  README.md  Xresources  install.sh  picom.conf  xinitrc  xprofile
fluxbox/: init  keys  menu  startup
fluxbox/styles/: nacitar_fbstyle
home/: xprofile
kitty/: kitty.conf
pc-specific/legion-7-16achg6/: on-output-profile-change  on-primary-output-change  output-profiles.json
pc-specific/legion-7-16achg6/wireplumber/wireplumber.conf.d/: 52-set-priorities.conf
pc-specific/legion-7-16achg6/xprofile.d/: 10-office-screen-setup.sh
scripts/: ns-gui-configs-bin-path.sh
scripts/gui-utility/: README.md  gamepad-overlay.html  pyproject.toml
scripts/gui-utility/src/gui_utility/: application.py  battery_monitor.py  cli_tool.py  controller_overlay.py  dbus.py  gamepad_overlay.py  gi.py  log_utility.py  media_control.py  output_profile.py  pactl.py  spotify_control.py  websocket_server.py  xrandr.py
scripts/gui-utility/tests/: test_package_version.py
